--- a/docker-compose.yml.EXAMPLE
+++ b/docker-compose.yml.EXAMPLE
@@ -60,6 +60,8 @@ services:
         - /etc/nginx/vhost.d
         - /usr/share/nginx/html
         - /var/run/docker.sock:/tmp/docker.sock:ro
+        labels:
+        - com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy
         networks:
         - ohcloud-network
         links:
