--- a/openhabcloud_nginx.conf.EXAMPLE
+++ b/openhabcloud_nginx.conf.EXAMPLE
@@ -3,14 +3,14 @@ upstream app_server {
 	}
 	
 server {
-		listen 0.0.0.0:8011;
+		listen 0.0.0.0:8011; # CHANGE TO YOUR OPENHAB PORT
 		server_name {WWW.YOURDOMAIN.COM};		
 
 		charset utf-8;
 		#include /bitnami/nginx/conf/mime.types;
 		
-		access_log "/tmp/openhabcloud-access.log";
-		error_log "/tmp/openhabcloud-error.log";
+		access_log "/var/log/nginx/openhabcloud-access.log";
+		error_log  "/var/log/nginx/openhabcloud-error.log";
 		client_max_body_size 300m;
 
 		root /var/www/html;
@@ -41,17 +41,6 @@ server {
 		}
 		location /downloads {
 			alias /opt/openhabcloud/public/downloads;
-		}
-		
-		location ~ ^/(socket.io|rest|images|static|rrdchart.png|chart|openhab.app|WebApp|CMD|cometVisu|proxy|greent|jquery|classicui|ui|basicui|doc|start|icon|habmin|remote|habpanel|ifttt/v1/actions/command){
-			proxy_pass http://app_server;
-			proxy_redirect off;
-			proxy_http_version 1.1;
-			proxy_set_header Host $host;
-			proxy_set_header Upgrade $http_upgrade;
-			proxy_set_header Connection "upgrade";
-			proxy_set_header X-Real-IP $remote_addr ;
-			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		}
 		
 		location / {
